--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.scss
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.scss
@@ -8,25 +8,25 @@
 .clear {
   width: 334px;
   border: 1px solid gray;
-  height: 100px;
+  height: 92px;
   margin: 0;
-  font-size: 45px;
+  font-size: 5px;
   align-self: center;
 
 
 }
 .numberButton {
-  display: flex;
-  flex-wrap: wrap;
-}
-.button {
-  width: 112px;
-  height: 100px;
-  font-size: 45px;
-  background-color: white;
-}
+  .button {
+    width: 112px;
+    height: 92px;
+    font-size: 45px;
+    background-color: white;
+
+  }
+
+  .color-button {
+    background-color: red;
+  }
 
 
-.color-button {
-  background-color: red;
 }
